Assignment 4/parser.out
Created by PLY version 3.10 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> program
Rule 1     program -> block_list
Rule 2     block_list -> basic_block block_list
Rule 3     block_list -> basic_block
Rule 4     basic_block -> declaration
Rule 5     basic_block -> function
Rule 6     basic_block -> function_prototype
Rule 7     function -> TYPE var seen_FM LPAREN parameter_list RPAREN function_body
Rule 8     function -> VOID NAME seen_FM LPAREN parameter_list RPAREN function_body
Rule 9     function -> TYPE var seen_FM LPAREN RPAREN function_body
Rule 10    function -> VOID NAME seen_FM LPAREN RPAREN function_body
Rule 11    function -> VOID MAIN seen_FM LPAREN RPAREN body
Rule 12    seen_FM -> <empty>
Rule 13    function_prototype -> TYPE var seen_FM LPAREN parameter_list RPAREN SEMICOLON
Rule 14    function_prototype -> TYPE var seen_FM LPAREN RPAREN SEMICOLON
Rule 15    function_prototype -> VOID NAME seen_FM LPAREN parameter_list RPAREN SEMICOLON
Rule 16    function_prototype -> VOID NAME seen_FM LPAREN RPAREN SEMICOLON
Rule 17    parameter_list -> TYPE var COMMA parameter_list
Rule 18    parameter_list -> TYPE var
Rule 19    TYPE -> INT
Rule 20    TYPE -> FLOAT
Rule 21    function_body -> LCURLY stmt_list return_stmt RCURLY
Rule 22    function_body -> body
Rule 23    return_stmt -> RETURN SEMICOLON
Rule 24    return_stmt -> RETURN R2 SEMICOLON
Rule 25    body -> LCURLY stmt_list RCURLY
Rule 26    body -> LCURLY RCURLY
Rule 27    stmt_list -> stmt stmt_list
Rule 28    stmt_list -> stmt
Rule 29    stmt -> matched_stmt
Rule 30    stmt -> unmatched_stmt
Rule 31    matched_stmt -> assign
Rule 32    matched_stmt -> declaration
Rule 33    matched_stmt -> matched_decision
Rule 34    matched_stmt -> matched_loop
Rule 35    unmatched_stmt -> unmatched_decision
Rule 36    unmatched_stmt -> unmatched_loop
Rule 37    assign -> L1 EQUALS R1 SEMICOLON
Rule 38    assign -> L2 EQUALS R2 SEMICOLON
Rule 39    L1 -> NAME
Rule 40    R1 -> R1 PLUS ALLNUM
Rule 41    R1 -> R1 MINUS ALLNUM
Rule 42    R1 -> R1 STAR ALLNUM
Rule 43    R1 -> R1 DIVIDE ALLNUM
Rule 44    R1 -> ALLNUM PLUS R1
Rule 45    R1 -> ALLNUM MINUS R1
Rule 46    R1 -> ALLNUM STAR R1
Rule 47    R1 -> ALLNUM DIVIDE R1
Rule 48    R1 -> R1 PLUS R1
Rule 49    R1 -> R1 MINUS R1
Rule 50    R1 -> R1 STAR R1
Rule 51    R1 -> R1 DIVIDE R1
Rule 52    R1 -> LPAREN R1 RPAREN
Rule 53    R1 -> MINUS R1
Rule 54    R1 -> PName
Rule 55    R1 -> function_call
Rule 56    R1 -> NAME
Rule 57    ALLNUM -> NUMBER
Rule 58    ALLNUM -> MINUS ALLNUM
Rule 59    L2 -> STAR L2
Rule 60    L2 -> STAR NAME
Rule 61    R2 -> R2 PLUS R2
Rule 62    R2 -> R2 MINUS R2
Rule 63    R2 -> R2 STAR R2
Rule 64    R2 -> R2 DIVIDE R2
Rule 65    R2 -> LPAREN R2 RPAREN
Rule 66    R2 -> MINUS R2
Rule 67    R2 -> PName
Rule 68    R2 -> function_call
Rule 69    R2 -> NAME
Rule 70    R2 -> NUMBER
Rule 71    PName -> STAR PName
Rule 72    PName -> STAR NAME
Rule 73    PName -> AMPERSAND NAME
Rule 74    function_call -> NAME LPAREN arg_list RPAREN
Rule 75    function_call -> NAME LPAREN RPAREN
Rule 76    arg_list -> R2 COMMA arg_list
Rule 77    arg_list -> R2
Rule 78    declaration -> TYPE varlist SEMICOLON
Rule 79    varlist -> var COMMA varlist
Rule 80    varlist -> var
Rule 81    var -> STAR var
Rule 82    var -> NAME
Rule 83    matched_loop -> WHILE LPAREN condition RPAREN matched_stmt
Rule 84    matched_loop -> WHILE LPAREN condition RPAREN body
Rule 85    matched_loop -> WHILE LPAREN condition RPAREN SEMICOLON
Rule 86    unmatched_loop -> WHILE LPAREN condition RPAREN unmatched_stmt
Rule 87    condition -> condition AND condition
Rule 88    condition -> condition OR condition
Rule 89    condition -> LPAREN condition RPAREN
Rule 90    condition -> NOT condition
Rule 91    condition -> R2 GT R2
Rule 92    condition -> R2 LT R2
Rule 93    condition -> R2 GE R2
Rule 94    condition -> R2 LE R2
Rule 95    condition -> R2 EQ R2
Rule 96    condition -> R2 NE R2
Rule 97    matched_decision -> IF LPAREN condition RPAREN matched_stmt ELSE matched_stmt
Rule 98    matched_decision -> IF LPAREN condition RPAREN matched_stmt ELSE body
Rule 99    matched_decision -> IF LPAREN condition RPAREN body ELSE matched_stmt
Rule 100   matched_decision -> IF LPAREN condition RPAREN body ELSE body
Rule 101   matched_decision -> IF LPAREN condition RPAREN matched_stmt ELSE SEMICOLON
Rule 102   matched_decision -> IF LPAREN condition RPAREN body ELSE SEMICOLON
Rule 103   matched_decision -> IF LPAREN condition RPAREN SEMICOLON ELSE matched_stmt
Rule 104   matched_decision -> IF LPAREN condition RPAREN SEMICOLON ELSE body
Rule 105   matched_decision -> IF LPAREN condition RPAREN SEMICOLON ELSE SEMICOLON
Rule 106   unmatched_decision -> IF LPAREN condition RPAREN stmt
Rule 107   unmatched_decision -> IF LPAREN condition RPAREN body
Rule 108   unmatched_decision -> IF LPAREN condition RPAREN SEMICOLON
Rule 109   unmatched_decision -> IF LPAREN condition RPAREN matched_stmt ELSE unmatched_stmt
Rule 110   unmatched_decision -> IF LPAREN condition RPAREN body ELSE unmatched_stmt
Rule 111   unmatched_decision -> IF LPAREN condition RPAREN SEMICOLON ELSE unmatched_stmt

Terminals, with rules where they appear

AMPERSAND            : 73
AND                  : 87
COMMA                : 17 76 79
DIVIDE               : 43 47 51 64
ELSE                 : 97 98 99 100 101 102 103 104 105 109 110 111
EQ                   : 95
EQUALS               : 37 38
FLOAT                : 20
GE                   : 93
GT                   : 91
IF                   : 97 98 99 100 101 102 103 104 105 106 107 108 109 110 111
INT                  : 19
LCURLY               : 21 25 26
LE                   : 94
LPAREN               : 7 8 9 10 11 13 14 15 16 52 65 74 75 83 84 85 86 89 97 98 99 100 101 102 103 104 105 106 107 108 109 110 111
LT                   : 92
MAIN                 : 11
MINUS                : 41 45 49 53 58 62 66
NAME                 : 8 10 15 16 39 56 60 69 72 73 74 75 82
NE                   : 96
NOT                  : 90
NUMBER               : 57 70
OR                   : 88
PLUS                 : 40 44 48 61
RCURLY               : 21 25 26
RETURN               : 23 24
RPAREN               : 7 8 9 10 11 13 14 15 16 52 65 74 75 83 84 85 86 89 97 98 99 100 101 102 103 104 105 106 107 108 109 110 111
SEMICOLON            : 13 14 15 16 23 24 37 38 78 85 101 102 103 104 105 105 108 111
STAR                 : 42 46 50 59 60 63 71 72 81
VOID                 : 8 10 11 15 16
WHILE                : 83 84 85 86
error                : 

Nonterminals, with rules where they appear

ALLNUM               : 40 41 42 43 44 45 46 47 58
L1                   : 37
L2                   : 38 59
PName                : 54 67 71
R1                   : 37 40 41 42 43 44 45 46 47 48 48 49 49 50 50 51 51 52 53
R2                   : 24 38 61 61 62 62 63 63 64 64 65 66 76 77 91 91 92 92 93 93 94 94 95 95 96 96
TYPE                 : 7 9 13 14 17 18 78
arg_list             : 74 76
assign               : 31
basic_block          : 2 3
block_list           : 1 2
body                 : 11 22 84 98 99 100 100 102 104 107 110
condition            : 83 84 85 86 87 87 88 88 89 90 97 98 99 100 101 102 103 104 105 106 107 108 109 110 111
declaration          : 4 32
function             : 5
function_body        : 7 8 9 10
function_call        : 55 68
function_prototype   : 6
matched_decision     : 33
matched_loop         : 34
matched_stmt         : 29 83 97 97 98 99 101 103 109
parameter_list       : 7 8 13 15 17
program              : 0
return_stmt          : 21
seen_FM              : 7 8 9 10 11 13 14 15 16
stmt                 : 27 28 106
stmt_list            : 21 25 27
unmatched_decision   : 35
unmatched_loop       : 36
unmatched_stmt       : 30 86 109 110 111
var                  : 7 9 13 14 17 18 79 80 81
varlist              : 78 79

Parsing method: LALR

state 0

    (0) S' -> . program
    (1) program -> . block_list
    (2) block_list -> . basic_block block_list
    (3) block_list -> . basic_block
    (4) basic_block -> . declaration
    (5) basic_block -> . function
    (6) basic_block -> . function_prototype
    (78) declaration -> . TYPE varlist SEMICOLON
    (7) function -> . TYPE var seen_FM LPAREN parameter_list RPAREN function_body
    (8) function -> . VOID NAME seen_FM LPAREN parameter_list RPAREN function_body
    (9) function -> . TYPE var seen_FM LPAREN RPAREN function_body
    (10) function -> . VOID NAME seen_FM LPAREN RPAREN function_body
    (11) function -> . VOID MAIN seen_FM LPAREN RPAREN body
    (13) function_prototype -> . TYPE var seen_FM LPAREN parameter_list RPAREN SEMICOLON
    (14) function_prototype -> . TYPE var seen_FM LPAREN RPAREN SEMICOLON
    (15) function_prototype -> . VOID NAME seen_FM LPAREN parameter_list RPAREN SEMICOLON
    (16) function_prototype -> . VOID NAME seen_FM LPAREN RPAREN SEMICOLON
    (19) TYPE -> . INT
    (20) TYPE -> . FLOAT

    VOID            shift and go to state 7
    INT             shift and go to state 3
    FLOAT           shift and go to state 1

    program                        shift and go to state 2
    declaration                    shift and go to state 4
    basic_block                    shift and go to state 5
    block_list                     shift and go to state 6
    function_prototype             shift and go to state 8
    function                       shift and go to state 9
    TYPE                           shift and go to state 10

state 1

    (20) TYPE -> FLOAT .

    STAR            reduce using rule 20 (TYPE -> FLOAT .)
    NAME            reduce using rule 20 (TYPE -> FLOAT .)


state 2

    (0) S' -> program .



state 3

    (19) TYPE -> INT .

    STAR            reduce using rule 19 (TYPE -> INT .)
    NAME            reduce using rule 19 (TYPE -> INT .)


state 4

    (4) basic_block -> declaration .

    VOID            reduce using rule 4 (basic_block -> declaration .)
    INT             reduce using rule 4 (basic_block -> declaration .)
    FLOAT           reduce using rule 4 (basic_block -> declaration .)
    $end            reduce using rule 4 (basic_block -> declaration .)


state 5

    (2) block_list -> basic_block . block_list
    (3) block_list -> basic_block .
    (2) block_list -> . basic_block block_list
    (3) block_list -> . basic_block
    (4) basic_block -> . declaration
    (5) basic_block -> . function
    (6) basic_block -> . function_prototype
    (78) declaration -> . TYPE varlist SEMICOLON
    (7) function -> . TYPE var seen_FM LPAREN parameter_list RPAREN function_body
    (8) function -> . VOID NAME seen_FM LPAREN parameter_list RPAREN function_body
    (9) function -> . TYPE var seen_FM LPAREN RPAREN function_body
    (10) function -> . VOID NAME seen_FM LPAREN RPAREN function_body
    (11) function -> . VOID MAIN seen_FM LPAREN RPAREN body
    (13) function_prototype -> . TYPE var seen_FM LPAREN parameter_list RPAREN SEMICOLON
    (14) function_prototype -> . TYPE var seen_FM LPAREN RPAREN SEMICOLON
    (15) function_prototype -> . VOID NAME seen_FM LPAREN parameter_list RPAREN SEMICOLON
    (16) function_prototype -> . VOID NAME seen_FM LPAREN RPAREN SEMICOLON
    (19) TYPE -> . INT
    (20) TYPE -> . FLOAT

    $end            reduce using rule 3 (block_list -> basic_block .)
    VOID            shift and go to state 7
    INT             shift and go to state 3
    FLOAT           shift and go to state 1

    declaration                    shift and go to state 4
    basic_block                    shift and go to state 5
    block_list                     shift and go to state 11
    function_prototype             shift and go to state 8
    function                       shift and go to state 9
    TYPE                           shift and go to state 10

state 6

    (1) program -> block_list .

    $end            reduce using rule 1 (program -> block_list .)


state 7

    (8) function -> VOID . NAME seen_FM LPAREN parameter_list RPAREN function_body
    (10) function -> VOID . NAME seen_FM LPAREN RPAREN function_body
    (11) function -> VOID . MAIN seen_FM LPAREN RPAREN body
    (15) function_prototype -> VOID . NAME seen_FM LPAREN parameter_list RPAREN SEMICOLON
    (16) function_prototype -> VOID . NAME seen_FM LPAREN RPAREN SEMICOLON

    NAME            shift and go to state 13
    MAIN            shift and go to state 12


state 8

    (6) basic_block -> function_prototype .

    VOID            reduce using rule 6 (basic_block -> function_prototype .)
    INT             reduce using rule 6 (basic_block -> function_prototype .)
    FLOAT           reduce using rule 6 (basic_block -> function_prototype .)
    $end            reduce using rule 6 (basic_block -> function_prototype .)


state 9

    (5) basic_block -> function .

    VOID            reduce using rule 5 (basic_block -> function .)
    INT             reduce using rule 5 (basic_block -> function .)
    FLOAT           reduce using rule 5 (basic_block -> function .)
    $end            reduce using rule 5 (basic_block -> function .)


state 10

    (78) declaration -> TYPE . varlist SEMICOLON
    (7) function -> TYPE . var seen_FM LPAREN parameter_list RPAREN function_body
    (9) function -> TYPE . var seen_FM LPAREN RPAREN function_body
    (13) function_prototype -> TYPE . var seen_FM LPAREN parameter_list RPAREN SEMICOLON
    (14) function_prototype -> TYPE . var seen_FM LPAREN RPAREN SEMICOLON
    (79) varlist -> . var COMMA varlist
    (80) varlist -> . var
    (81) var -> . STAR var
    (82) var -> . NAME

    STAR            shift and go to state 17
    NAME            shift and go to state 15

    var                            shift and go to state 14
    varlist                        shift and go to state 16

state 11

    (2) block_list -> basic_block block_list .

    $end            reduce using rule 2 (block_list -> basic_block block_list .)


state 12

    (11) function -> VOID MAIN . seen_FM LPAREN RPAREN body
    (12) seen_FM -> .

    LPAREN          reduce using rule 12 (seen_FM -> .)

    seen_FM                        shift and go to state 18

state 13

    (8) function -> VOID NAME . seen_FM LPAREN parameter_list RPAREN function_body
    (10) function -> VOID NAME . seen_FM LPAREN RPAREN function_body
    (15) function_prototype -> VOID NAME . seen_FM LPAREN parameter_list RPAREN SEMICOLON
    (16) function_prototype -> VOID NAME . seen_FM LPAREN RPAREN SEMICOLON
    (12) seen_FM -> .

    LPAREN          reduce using rule 12 (seen_FM -> .)

    seen_FM                        shift and go to state 19

state 14

    (7) function -> TYPE var . seen_FM LPAREN parameter_list RPAREN function_body
    (9) function -> TYPE var . seen_FM LPAREN RPAREN function_body
    (13) function_prototype -> TYPE var . seen_FM LPAREN parameter_list RPAREN SEMICOLON
    (14) function_prototype -> TYPE var . seen_FM LPAREN RPAREN SEMICOLON
    (79) varlist -> var . COMMA varlist
    (80) varlist -> var .
    (12) seen_FM -> .

    COMMA           shift and go to state 20
    SEMICOLON       reduce using rule 80 (varlist -> var .)
    LPAREN          reduce using rule 12 (seen_FM -> .)

    seen_FM                        shift and go to state 21

state 15

    (82) var -> NAME .

    COMMA           reduce using rule 82 (var -> NAME .)
    LPAREN          reduce using rule 82 (var -> NAME .)
    SEMICOLON       reduce using rule 82 (var -> NAME .)
    RPAREN          reduce using rule 82 (var -> NAME .)


state 16

    (78) declaration -> TYPE varlist . SEMICOLON

    SEMICOLON       shift and go to state 22


state 17

    (81) var -> STAR . var
    (81) var -> . STAR var
    (82) var -> . NAME

    STAR            shift and go to state 17
    NAME            shift and go to state 15

    var                            shift and go to state 23

state 18

    (11) function -> VOID MAIN seen_FM . LPAREN RPAREN body

    LPAREN          shift and go to state 24


state 19

    (8) function -> VOID NAME seen_FM . LPAREN parameter_list RPAREN function_body
    (10) function -> VOID NAME seen_FM . LPAREN RPAREN function_body
    (15) function_prototype -> VOID NAME seen_FM . LPAREN parameter_list RPAREN SEMICOLON
    (16) function_prototype -> VOID NAME seen_FM . LPAREN RPAREN SEMICOLON

    LPAREN          shift and go to state 25


state 20

    (79) varlist -> var COMMA . varlist
    (79) varlist -> . var COMMA varlist
    (80) varlist -> . var
    (81) var -> . STAR var
    (82) var -> . NAME

    STAR            shift and go to state 17
    NAME            shift and go to state 15

    var                            shift and go to state 26
    varlist                        shift and go to state 27

state 21

    (7) function -> TYPE var seen_FM . LPAREN parameter_list RPAREN function_body
    (9) function -> TYPE var seen_FM . LPAREN RPAREN function_body
    (13) function_prototype -> TYPE var seen_FM . LPAREN parameter_list RPAREN SEMICOLON
    (14) function_prototype -> TYPE var seen_FM . LPAREN RPAREN SEMICOLON

    LPAREN          shift and go to state 28


state 22

    (78) declaration -> TYPE varlist SEMICOLON .

    IF              reduce using rule 78 (declaration -> TYPE varlist SEMICOLON .)
    WHILE           reduce using rule 78 (declaration -> TYPE varlist SEMICOLON .)
    NAME            reduce using rule 78 (declaration -> TYPE varlist SEMICOLON .)
    STAR            reduce using rule 78 (declaration -> TYPE varlist SEMICOLON .)
    INT             reduce using rule 78 (declaration -> TYPE varlist SEMICOLON .)
    FLOAT           reduce using rule 78 (declaration -> TYPE varlist SEMICOLON .)
    RCURLY          reduce using rule 78 (declaration -> TYPE varlist SEMICOLON .)
    RETURN          reduce using rule 78 (declaration -> TYPE varlist SEMICOLON .)
    VOID            reduce using rule 78 (declaration -> TYPE varlist SEMICOLON .)
    $end            reduce using rule 78 (declaration -> TYPE varlist SEMICOLON .)
    ELSE            reduce using rule 78 (declaration -> TYPE varlist SEMICOLON .)


state 23

    (81) var -> STAR var .

    COMMA           reduce using rule 81 (var -> STAR var .)
    LPAREN          reduce using rule 81 (var -> STAR var .)
    SEMICOLON       reduce using rule 81 (var -> STAR var .)
    RPAREN          reduce using rule 81 (var -> STAR var .)


state 24

    (11) function -> VOID MAIN seen_FM LPAREN . RPAREN body

    RPAREN          shift and go to state 29


state 25

    (8) function -> VOID NAME seen_FM LPAREN . parameter_list RPAREN function_body
    (10) function -> VOID NAME seen_FM LPAREN . RPAREN function_body
    (15) function_prototype -> VOID NAME seen_FM LPAREN . parameter_list RPAREN SEMICOLON
    (16) function_prototype -> VOID NAME seen_FM LPAREN . RPAREN SEMICOLON
    (17) parameter_list -> . TYPE var COMMA parameter_list
    (18) parameter_list -> . TYPE var
    (19) TYPE -> . INT
    (20) TYPE -> . FLOAT

    RPAREN          shift and go to state 30
    INT             shift and go to state 3
    FLOAT           shift and go to state 1

    parameter_list                 shift and go to state 31
    TYPE                           shift and go to state 32

state 26

    (79) varlist -> var . COMMA varlist
    (80) varlist -> var .

    COMMA           shift and go to state 20
    SEMICOLON       reduce using rule 80 (varlist -> var .)


state 27

    (79) varlist -> var COMMA varlist .

    SEMICOLON       reduce using rule 79 (varlist -> var COMMA varlist .)


state 28

    (7) function -> TYPE var seen_FM LPAREN . parameter_list RPAREN function_body
    (9) function -> TYPE var seen_FM LPAREN . RPAREN function_body
    (13) function_prototype -> TYPE var seen_FM LPAREN . parameter_list RPAREN SEMICOLON
    (14) function_prototype -> TYPE var seen_FM LPAREN . RPAREN SEMICOLON
    (17) parameter_list -> . TYPE var COMMA parameter_list
    (18) parameter_list -> . TYPE var
    (19) TYPE -> . INT
    (20) TYPE -> . FLOAT

    RPAREN          shift and go to state 34
    INT             shift and go to state 3
    FLOAT           shift and go to state 1

    parameter_list                 shift and go to state 33
    TYPE                           shift and go to state 32

state 29

    (11) function -> VOID MAIN seen_FM LPAREN RPAREN . body
    (25) body -> . LCURLY stmt_list RCURLY
    (26) body -> . LCURLY RCURLY

    LCURLY          shift and go to state 35

    body                           shift and go to state 36

state 30

    (10) function -> VOID NAME seen_FM LPAREN RPAREN . function_body
    (16) function_prototype -> VOID NAME seen_FM LPAREN RPAREN . SEMICOLON
    (21) function_body -> . LCURLY stmt_list return_stmt RCURLY
    (22) function_body -> . body
    (25) body -> . LCURLY stmt_list RCURLY
    (26) body -> . LCURLY RCURLY

    SEMICOLON       shift and go to state 38
    LCURLY          shift and go to state 37

    body                           shift and go to state 39
    function_body                  shift and go to state 40

state 31

    (8) function -> VOID NAME seen_FM LPAREN parameter_list . RPAREN function_body
    (15) function_prototype -> VOID NAME seen_FM LPAREN parameter_list . RPAREN SEMICOLON

    RPAREN          shift and go to state 41


state 32

    (17) parameter_list -> TYPE . var COMMA parameter_list
    (18) parameter_list -> TYPE . var
    (81) var -> . STAR var
    (82) var -> . NAME

    STAR            shift and go to state 17
    NAME            shift and go to state 15

    var                            shift and go to state 42

state 33

    (7) function -> TYPE var seen_FM LPAREN parameter_list . RPAREN function_body
    (13) function_prototype -> TYPE var seen_FM LPAREN parameter_list . RPAREN SEMICOLON

    RPAREN          shift and go to state 43


state 34

    (9) function -> TYPE var seen_FM LPAREN RPAREN . function_body
    (14) function_prototype -> TYPE var seen_FM LPAREN RPAREN . SEMICOLON
    (21) function_body -> . LCURLY stmt_list return_stmt RCURLY
    (22) function_body -> . body
    (25) body -> . LCURLY stmt_list RCURLY
    (26) body -> . LCURLY RCURLY

    SEMICOLON       shift and go to state 44
    LCURLY          shift and go to state 37

    body                           shift and go to state 39
    function_body                  shift and go to state 45

state 35

    (25) body -> LCURLY . stmt_list RCURLY
    (26) body -> LCURLY . RCURLY
    (27) stmt_list -> . stmt stmt_list
    (28) stmt_list -> . stmt
    (29) stmt -> . matched_stmt
    (30) stmt -> . unmatched_stmt
    (31) matched_stmt -> . assign
    (32) matched_stmt -> . declaration
    (33) matched_stmt -> . matched_decision
    (34) matched_stmt -> . matched_loop
    (35) unmatched_stmt -> . unmatched_decision
    (36) unmatched_stmt -> . unmatched_loop
    (37) assign -> . L1 EQUALS R1 SEMICOLON
    (38) assign -> . L2 EQUALS R2 SEMICOLON
    (78) declaration -> . TYPE varlist SEMICOLON
    (97) matched_decision -> . IF LPAREN condition RPAREN matched_stmt ELSE matched_stmt
    (98) matched_decision -> . IF LPAREN condition RPAREN matched_stmt ELSE body
    (99) matched_decision -> . IF LPAREN condition RPAREN body ELSE matched_stmt
    (100) matched_decision -> . IF LPAREN condition RPAREN body ELSE body
    (101) matched_decision -> . IF LPAREN condition RPAREN matched_stmt ELSE SEMICOLON
    (102) matched_decision -> . IF LPAREN condition RPAREN body ELSE SEMICOLON
    (103) matched_decision -> . IF LPAREN condition RPAREN SEMICOLON ELSE matched_stmt
    (104) matched_decision -> . IF LPAREN condition RPAREN SEMICOLON ELSE body
    (105) matched_decision -> . IF LPAREN condition RPAREN SEMICOLON ELSE SEMICOLON
    (83) matched_loop -> . WHILE LPAREN condition RPAREN matched_stmt
    (84) matched_loop -> . WHILE LPAREN condition RPAREN body
    (85) matched_loop -> . WHILE LPAREN condition RPAREN SEMICOLON
    (106) unmatched_decision -> . IF LPAREN condition RPAREN stmt
    (107) unmatched_decision -> . IF LPAREN condition RPAREN body
    (108) unmatched_decision -> . IF LPAREN condition RPAREN SEMICOLON
    (109) unmatched_decision -> . IF LPAREN condition RPAREN matched_stmt ELSE unmatched_stmt
    (110) unmatched_decision -> . IF LPAREN condition RPAREN body ELSE unmatched_stmt
    (111) unmatched_decision -> . IF LPAREN condition RPAREN SEMICOLON ELSE unmatched_stmt
    (86) unmatched_loop -> . WHILE LPAREN condition RPAREN unmatched_stmt
    (39) L1 -> . NAME
    (59) L2 -> . STAR L2
    (60) L2 -> . STAR NAME
    (19) TYPE -> . INT
    (20) TYPE -> . FLOAT

    RCURLY          shift and go to state 52
    IF              shift and go to state 55
    WHILE           shift and go to state 47
    NAME            shift and go to state 57
    STAR            shift and go to state 59
    INT             shift and go to state 3
    FLOAT           shift and go to state 1

    L2                             shift and go to state 46
    declaration                    shift and go to state 48
    unmatched_loop                 shift and go to state 49
    matched_loop                   shift and go to state 50
    TYPE                           shift and go to state 54
    L1                             shift and go to state 58
    unmatched_decision             shift and go to state 51
    stmt                           shift and go to state 60
    matched_stmt                   shift and go to state 61
    matched_decision               shift and go to state 53
    assign                         shift and go to state 62
    unmatched_stmt                 shift and go to state 56
    stmt_list                      shift and go to state 63

state 36

    (11) function -> VOID MAIN seen_FM LPAREN RPAREN body .

    VOID            reduce using rule 11 (function -> VOID MAIN seen_FM LPAREN RPAREN body .)
    INT             reduce using rule 11 (function -> VOID MAIN seen_FM LPAREN RPAREN body .)
    FLOAT           reduce using rule 11 (function -> VOID MAIN seen_FM LPAREN RPAREN body .)
    $end            reduce using rule 11 (function -> VOID MAIN seen_FM LPAREN RPAREN body .)


state 37

    (21) function_body -> LCURLY . stmt_list return_stmt RCURLY
    (25) body -> LCURLY . stmt_list RCURLY
    (26) body -> LCURLY . RCURLY
    (27) stmt_list -> . stmt stmt_list
    (28) stmt_list -> . stmt
    (29) stmt -> . matched_stmt
    (30) stmt -> . unmatched_stmt
    (31) matched_stmt -> . assign
    (32) matched_stmt -> . declaration
    (33) matched_stmt -> . matched_decision
    (34) matched_stmt -> . matched_loop
    (35) unmatched_stmt -> . unmatched_decision
    (36) unmatched_stmt -> . unmatched_loop
    (37) assign -> . L1 EQUALS R1 SEMICOLON
    (38) assign -> . L2 EQUALS R2 SEMICOLON
    (78) declaration -> . TYPE varlist SEMICOLON
    (97) matched_decision -> . IF LPAREN condition RPAREN matched_stmt ELSE matched_stmt
    (98) matched_decision -> . IF LPAREN condition RPAREN matched_stmt ELSE body
    (99) matched_decision -> . IF LPAREN condition RPAREN body ELSE matched_stmt
    (100) matched_decision -> . IF LPAREN condition RPAREN body ELSE body
    (101) matched_decision -> . IF LPAREN condition RPAREN matched_stmt ELSE SEMICOLON
    (102) matched_decision -> . IF LPAREN condition RPAREN body ELSE SEMICOLON
    (103) matched_decision -> . IF LPAREN condition RPAREN SEMICOLON ELSE matched_stmt
    (104) matched_decision -> . IF LPAREN condition RPAREN SEMICOLON ELSE body
    (105) matched_decision -> . IF LPAREN condition RPAREN SEMICOLON ELSE SEMICOLON
    (83) matched_loop -> . WHILE LPAREN condition RPAREN matched_stmt
    (84) matched_loop -> . WHILE LPAREN condition RPAREN body
    (85) matched_loop -> . WHILE LPAREN condition RPAREN SEMICOLON
    (106) unmatched_decision -> . IF LPAREN condition RPAREN stmt
    (107) unmatched_decision -> . IF LPAREN condition RPAREN body
    (108) unmatched_decision -> . IF LPAREN condition RPAREN SEMICOLON
    (109) unmatched_decision -> . IF LPAREN condition RPAREN matched_stmt ELSE unmatched_stmt
    (110) unmatched_decision -> . IF LPAREN condition RPAREN body ELSE unmatched_stmt
    (111) unmatched_decision -> . IF LPAREN condition RPAREN SEMICOLON ELSE unmatched_stmt
    (86) unmatched_loop -> . WHILE LPAREN condition RPAREN unmatched_stmt
    (39) L1 -> . NAME
    (59) L2 -> . STAR L2
    (60) L2 -> . STAR NAME
    (19) TYPE -> . INT
    (20) TYPE -> . FLOAT

    RCURLY          shift and go to state 52
    IF              shift and go to state 55
    WHILE           shift and go to state 47
    NAME            shift and go to state 57
    STAR            shift and go to state 59
    INT             shift and go to state 3
    FLOAT           shift and go to state 1

    L2                             shift and go to state 46
    declaration                    shift and go to state 48
    unmatched_loop                 shift and go to state 49
    matched_loop                   shift and go to state 50
    TYPE                           shift and go to state 54
    L1                             shift and go to state 58
    unmatched_decision             shift and go to state 51
    stmt                           shift and go to state 60
    matched_stmt                   shift and go to state 61
    matched_decision               shift and go to state 53
    assign                         shift and go to state 62
    unmatched_stmt                 shift and go to state 56
    stmt_list                      shift and go to state 64

state 38

    (16) function_prototype -> VOID NAME seen_FM LPAREN RPAREN SEMICOLON .

    VOID            reduce using rule 16 (function_prototype -> VOID NAME seen_FM LPAREN RPAREN SEMICOLON .)
    INT             reduce using rule 16 (function_prototype -> VOID NAME seen_FM LPAREN RPAREN SEMICOLON .)
    FLOAT           reduce using rule 16 (function_prototype -> VOID NAME seen_FM LPAREN RPAREN SEMICOLON .)
    $end            reduce using rule 16 (function_prototype -> VOID NAME seen_FM LPAREN RPAREN SEMICOLON .)


state 39

    (22) function_body -> body .

    VOID            reduce using rule 22 (function_body -> body .)
    INT             reduce using rule 22 (function_body -> body .)
    FLOAT           reduce using rule 22 (function_body -> body .)
    $end            reduce using rule 22 (function_body -> body .)


state 40

    (10) function -> VOID NAME seen_FM LPAREN RPAREN function_body .

    VOID            reduce using rule 10 (function -> VOID NAME seen_FM LPAREN RPAREN function_body .)
    INT             reduce using rule 10 (function -> VOID NAME seen_FM LPAREN RPAREN function_body .)
    FLOAT           reduce using rule 10 (function -> VOID NAME seen_FM LPAREN RPAREN function_body .)
    $end            reduce using rule 10 (function -> VOID NAME seen_FM LPAREN RPAREN function_body .)


state 41

    (8) function -> VOID NAME seen_FM LPAREN parameter_list RPAREN . function_body
    (15) function_prototype -> VOID NAME seen_FM LPAREN parameter_list RPAREN . SEMICOLON
    (21) function_body -> . LCURLY stmt_list return_stmt RCURLY
    (22) function_body -> . body
    (25) body -> . LCURLY stmt_list RCURLY
    (26) body -> . LCURLY RCURLY

    SEMICOLON       shift and go to state 66
    LCURLY          shift and go to state 37

    body                           shift and go to state 39
    function_body                  shift and go to state 65

state 42

    (17) parameter_list -> TYPE var . COMMA parameter_list
    (18) parameter_list -> TYPE var .

    COMMA           shift and go to state 67
    RPAREN          reduce using rule 18 (parameter_list -> TYPE var .)


state 43

    (7) function -> TYPE var seen_FM LPAREN parameter_list RPAREN . function_body
    (13) function_prototype -> TYPE var seen_FM LPAREN parameter_list RPAREN . SEMICOLON
    (21) function_body -> . LCURLY stmt_list return_stmt RCURLY
    (22) function_body -> . body
    (25) body -> . LCURLY stmt_list RCURLY
    (26) body -> . LCURLY RCURLY

    SEMICOLON       shift and go to state 69
    LCURLY          shift and go to state 37

    body                           shift and go to state 39
    function_body                  shift and go to state 68

state 44

    (14) function_prototype -> TYPE var seen_FM LPAREN RPAREN SEMICOLON .

    VOID            reduce using rule 14 (function_prototype -> TYPE var seen_FM LPAREN RPAREN SEMICOLON .)
    INT             reduce using rule 14 (function_prototype -> TYPE var seen_FM LPAREN RPAREN SEMICOLON .)
    FLOAT           reduce using rule 14 (function_prototype -> TYPE var seen_FM LPAREN RPAREN SEMICOLON .)
    $end            reduce using rule 14 (function_prototype -> TYPE var seen_FM LPAREN RPAREN SEMICOLON .)


state 45

    (9) function -> TYPE var seen_FM LPAREN RPAREN function_body .
